files/bastion.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bastion
spec:
  containers:
    - name: bastion
      image: alpine/curl
      args:
        - sleep
        - infinity
