files/service-node-port.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service-node-port
spec:
  replicas: 3
  selector:
    matchLabels:
      role: role-node-port
  template:
    metadata:
      labels:
        role: role-node-port
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
  selector:
    role: role-node-port
